--- a/app/src/main/res/layout/activity_initial.xml
+++ b/app/src/main/res/layout/activity_initial.xml
@@ -46,6 +46,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:progress="0"
+        app:trackThickness="10dp"
+        app:trackCornerRadius="3dp"
+        app:indicatorColor="@color/subColor"
+        app:trackColor="@color/mainColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleTextView"
         app:layout_constraintVertical_bias="0.283"
