make animation when click weekend button

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,6 +27,13 @@
         </item>
     </style>
 
+    <!-- seekbar style -->
+    <style name="seekbarTheme" parent="Theme.AppCompat.Light">
+        <item name="android:progressBackgroundTint">@color/white</item>
+        <item name="android:progressTint">@color/mainColor</item>
+        <item name="android:colorControlActivated">@color/main_orange</item>
+    </style>
+
     <style name="Theme.PairAlarm.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
