--- a/app/src/main/res/layout/activity_make_alarm.xml
+++ b/app/src/main/res/layout/activity_make_alarm.xml
@@ -208,6 +208,30 @@
                 />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/image_volume"
+                android:layout_width="35dp"
+                android:layout_height="55dp"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/volume_icon" />
+
+            <SeekBar
+                android:id="@+id/volumeSeekBar"
+                style="@android:style/Widget.DeviceDefault.Light.SeekBar"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="6"
+                android:max="100"
+                android:min="0"
+                android:progress="100"
+                android:theme="@style/seekbarTheme"
+                android:thumb="?android:attr/textSelectHandle" />
+        </LinearLayout>
 
 
     </LinearLayout>
