--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,8 @@
     // mainColor와 잘 어울리는 색
     <color name="main_pink">#ff66cc</color>
     <color name="main_blue">#3366FF</color>
-    <color name="main_orange">#FF3300</color>
+    <color name="main_deep_orange">#FF3300</color>
     <color name="main_deepPurple">#9900FF</color>
     <color name="main_deepBlue">#0066cc</color>
+    <color name="main_orange">#FFC000</color>
 </resources>
