--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="red">#990011</color>
     <color name="deep_yellow">#F5D042</color>
     <color name="new_subTextColor">#949494</color>
+    <color name="Space_Purple">#CEABFA</color>
 
     // mainColor와 잘 어울리는 색
     <color name="main_pink">#ff66cc</color>
