--- a/app/src/main/res/layout/activity_make_alarm.xml
+++ b/app/src/main/res/layout/activity_make_alarm.xml
@@ -185,7 +185,7 @@
                 android:textSize="20dp"
                 app:cornerRadius="60dp"
                 app:strokeWidth="2dp"
-                app:strokeColor="@color/light_blue"
+                app:strokeColor="@color/background"
                 android:layout_weight="1"
                 />
 
