--- a/app/src/main/res/layout/dialog_bell_set.xml
+++ b/app/src/main/res/layout/dialog_bell_set.xml
@@ -77,7 +77,7 @@
                 android:id="@+id/playButton"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp"
                 android:backgroundTint="@color/new_subTextColor"
                 app:cornerRadius="20dp"
                 android:layout_weight="1"
@@ -88,7 +88,7 @@
                 android:id="@+id/saveButton"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:backgroundTint="@color/mainColor"
                 app:cornerRadius="20dp"
                 android:layout_weight="1"
